--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Geo Web Browser</title>
-    <script type="module" src="js/model-viewer.min.js"></script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
